# knowledge-base-rag

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/app/: __init__.py  main.py
backend/src/app/api/: __init__.py  routes.py
backend/src/app/application/: __init__.py  chat.py  upload_document.py
backend/src/app/core/: config.py
backend/src/app/domain/: __init__.py
backend/src/app/domain/entities/: __init__.py  documents.py
backend/src/app/domain/repositories/: __init__.py  document_store.py  vector_store.py
backend/src/app/domain/services/: __init__.py  embedding_service.py  rag_service.py  text_extractor.py
backend/src/app/infrastructure/: __init__.py
backend/src/app/infrastructure/embeddings/: __init__.py  sentence_transformers.py
backend/src/app/infrastructure/rag/: __init__.py  langchain_rag_service.py
backend/src/app/infrastructure/text_extraction/: __init__.py  tesseract_extractor.py
backend/src/app/infrastructure/vectorstores/: __init__.py  chroma.py
backend/src/app/interfaces/: __init__.py
backend/src/app/interfaces/api/: dependencies.py  routes.py
backend/src/app/interfaces/api/controllers/: __init__.py  chat_controller.py  upload_controller.py
backend/src/app/interfaces/api/schemas/: chat.py
backend/src/app/services/: document_store.py  vector_store.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: ChatPanel.tsx  UploadPanel.tsx
ops/: docker-compose.yml
ops/containers/backend/: Dockerfile
