[project]
name = "knowledge-base-rag-backend"
version = "0.0.1"
description = "FastAPI backend for a knowledge base RAG playground"
authors = [{ name = "" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "chromadb>=0.5.3",
  "torch==2.3.1",
  "accelerate>=0.31.0",
  "sentence-transformers>=2.7.0",
  "transformers>=4.41.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.6",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
